--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/busl_3.conf
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/busl_3.conf
@@ -16,7 +16,8 @@
 #BUSL_3_FNAME_PEAK_LIST=abc
 #BUSL_3_FNAME_PEAK_LIST=44_3.2_15_file-io.USDJPY.Period-H1.Days-5000.Bars-120000.20180903_134452.2018-06.csv
 #BUSL_3_FNAME_PEAK_LIST=44_3.2_15_file-io.EURJPY.Period-H1.Days-5000.Bars-120000.20180903_135340.(m-11).20180926_205209.csv
-BUSL_3_FNAME_PEAK_LIST=44_3.2_15_file-io.EURJPY.Period-H1.Days-5000.Bars-120000.20180903_135340.csv
+#BUSL_3_FNAME_PEAK_LIST=44_3.2_15_file-io.EURJPY.Period-H1.Days-5000.Bars-120000.20180903_135340.csv
+BUSL_3_FNAME_PEAK_LIST=44_3.2_15_file-io.EURJPY.Period-H1.Days-5000.Bars-120000.20180903_135340.(m-11).20180926_205209.(new).csv
 
 ##################################
 # csv dir path
