--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/busl_3.conf
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/busl_3.conf
@@ -18,7 +18,8 @@
 #BUSL_3_FNAME_PEAK_LIST=44_3.2_15_file-io.EURJPY.Period-H1.Days-5000.Bars-120000.20180903_135340.(m-11).20180926_205209.csv
 #BUSL_3_FNAME_PEAK_LIST=44_3.2_15_file-io.EURJPY.Period-H1.Days-5000.Bars-120000.20180903_135340.csv
 #BUSL_3_FNAME_PEAK_LIST=44_3.2_15_file-io.EURJPY.Period-H1.Days-5000.Bars-120000.20180903_135340.(m-11).20180926_205209.(new).csv
-BUSL_3_FNAME_PEAK_LIST=44_3.2_15_file-io.EURJPY.Period-H1.Days-5000.Bars-120000.20180903_135340.(m-11).20180926_205209.(new)(dummy).csv
+#BUSL_3_FNAME_PEAK_LIST=44_3.2_15_file-io.EURJPY.Period-H1.Days-5000.Bars-120000.20180903_135340.(m-11).20180926_205209.(new)(dummy).csv
+BUSL_3_FNAME_PEAK_LIST=44_3.2_15_file-io.EURJPY.Period-H1.Days-5000.Bars-120000.20180903_135340.(m-11).20180926_205209.(new).(SHRINK-100).csv
 
 ##################################
 # csv dir path
