myself] res free# JVEMV6 44#2.2 27 / 44. currency / 2. research / 2. patterns / 20181116
steps=~2
---
g c -a

libfx_2 :: is_Trend__Flat(lo_BarDatas, dpath_Log, fname_Log, ts_Inclination = 0.1)
	--> "j1 : Y : 4"

	==> done

--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/busl_3.conf
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/busl_3.conf
@@ -19,7 +19,9 @@
 #BUSL_3_FNAME_PEAK_LIST=44_3.2_15_file-io.EURJPY.Period-H1.Days-5000.Bars-120000.20180903_135340.csv
 #BUSL_3_FNAME_PEAK_LIST=44_3.2_15_file-io.EURJPY.Period-H1.Days-5000.Bars-120000.20180903_135340.(m-11).20180926_205209.(new).csv
 #BUSL_3_FNAME_PEAK_LIST=44_3.2_15_file-io.EURJPY.Period-H1.Days-5000.Bars-120000.20180903_135340.(m-11).20180926_205209.(new)(dummy).csv
-BUSL_3_FNAME_PEAK_LIST=44_3.2_15_file-io.EURJPY.Period-H1.Days-5000.Bars-120000.20180903_135340.(m-11).20180926_205209.(new).(SHRINK-100).csv
+#BUSL_3_FNAME_PEAK_LIST=44_3.2_15_file-io.EURJPY.Period-H1.Days-5000.Bars-120000.20180903_135340.(m-11).20180926_205209.(new).(SHRINK-100).csv
+BUSL_3_FNAME_PEAK_LIST=44_3.2_15_file-io.EURJPY.Period-H1.Days-5000.Bars-120000.20180903_135340.(m-11).20180926_205209.(new).(SHRINK-50).csv
+
 
 ##################################
 # csv dir path
