myself] res free# JVEMV6 44#5.1 38 / 44. currency / 5. ea tools / 1. first / 20190119
steps=~
------------
g c -a

fixing views.py regarding : http://127.0.0.1:8000/curr/

	==> done

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,5 @@
 eclipse.preferences.version=1
+encoding//prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/parce_trade_reports.py=utf-8
+encoding//prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/test_1.py=utf-8
+encoding//prog/D-7/2_2/VIRTUAL/Admin_Projects/im/views.py=UTF-8
 encoding//prog/D-7/2_2/VIRTUAL/Admin_Projects/mm/libs_mm/libfx.py=UTF-8
