myself] res free# JVEMV6 44#3.4 1 / 44. currency / 3. prog'mng : tester / 4. no-42, tester_1 / 20190202
steps=~
------------
g c -a

TASK-1 : setup ::[8.19

        ==> done

# TASK-2 : gen-ed csv file ---> how many "sell"-s ~~> gained/lost
        ==> done

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,5 +3,6 @@ encoding//prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/ops/5.1/1_1.py=utf-8
 encoding//prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/ops/5.1/38-/1_1.py=utf-8
 encoding//prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/parce_trade_reports.py=utf-8
 encoding//prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/test_1.py=utf-8
+encoding//prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/views.py=UTF-8
 encoding//prog/D-7/2_2/VIRTUAL/Admin_Projects/im/views.py=UTF-8
 encoding//prog/D-7/2_2/VIRTUAL/Admin_Projects/mm/libs_mm/libfx.py=UTF-8
