myself] res free# JVEMV6 44#8.1 5 / 44. currency / 8. prog-python / 1. basic stats / 20190214
steps=~
------------
g c -a

TASK-2 ::]1008
    gen csv ---> E/J, M15

		==> done

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@ prog/D-34/5_/VIRTUAL/env
 prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/csv_raw
 prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/csv
 
+### 2019/02/14 11:00:50
+prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/log/list_4-3.slice*
