myself] res free# JVEMV6 44#8.2 19 / 44. currency / 8. prog-python / 2. basic stats, cat-2 / 20190308
steps=~
------------
g c -a

TASK-2 : stats ---> gen + graph

	==> done

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,6 @@ prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/csv
 
 ### 2019/02/14 11:00:50
 prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/log/list_4-3.slice*
+
+### 2019/03/08 10:13:33
+prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/log/storage_log
