--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,7 @@ eclipse.preferences.version=1
 encoding//prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/ops/44_9/44_9_renumbering_raw_csv_data.py=utf-8
 encoding//prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/ops/5.1/1_1.py=utf-8
 encoding//prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/ops/5.1/38-/1_1.py=utf-8
+encoding//prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/ops/gen_model_pattern_strings.py=utf-8
 encoding//prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/ops/gen_random_string.py=utf-8
 encoding//prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/parce_trade_reports.py=utf-8
 encoding//prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/test_1.py=utf-8
