myself] res free# JVEMV6 44#8.2 66 / 44. currency / 8. prog-python / 2. basic stats, cat-2 / 20190515
steps=~
------------
g c -a

REVIEW ::[20190515_141041
	U/J, A/J, M15

	==> done

--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/conf/busl_3__sec-13.conf
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/conf/busl_3__sec-13.conf
@@ -5,7 +5,11 @@
 #	<Usage>
 #		1. use "#" char at the top of the line for comment lines
 #		2. blank line --> will be omitted
-#
+#	
+#	<Cautions>
+#		1. the key, the equal symbol, and the value ==> no space between them.
+#			==> e.g. 'abc=200'	--> proper
+#					 'abc = 200'	--> NOT proper
 ##################################
 
 ##################################
@@ -15,10 +19,14 @@
 #		views :: def _BUSL3_Tester_No_44_1__Sec_1_A13_Correlation_
 #
 ##################################
+#	csv : 1
 #fname_Src_Csv_1=44_5.1_10_rawdata.(AUDJPY).(Period-H1).(NumOfUnits-8000).(Bars-ALL-20190508_143318).20190311_090020.csv
-fname_Src_Csv_1=44_5.1_10_rawdata.(USDJPY).(Period-H1).(NumOfUnits-3000).(Bars-ALL-20190506_230211).20190318_085834.csv
+#fname_Src_Csv_1=44_5.1_10_rawdata.(USDJPY).(Period-H1).(NumOfUnits-3000).(Bars-ALL-20190506_230211).20190318_085834.csv
+fname_Src_Csv_1=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.csv
 
-fname_Src_Csv_2=44_5.1_10_rawdata.(AUDJPY).(Period-H1).(NumOfUnits-8000).(Bars-ALL-20190508_143318).20190311_090020.csv
+#	csv : 2
+fname_Src_Csv_2=44_5.1_10_rawdata.(USDJPY).(Period-M15).(NumOfUnits-10000).(Bars-ALL-20190427_162903).20190324_112524.csv
+#fname_Src_Csv_2=44_5.1_10_rawdata.(AUDJPY).(Period-H1).(NumOfUnits-8000).(Bars-ALL-20190508_143318).20190311_090020.csv
 #fname_Src_Csv_2=44_5.1_10_rawdata.(EURJPY).(Period-H1).(NumOfUnits-4500).(Bars-ALL-20190506_230346).20190307_144106.csv
 
 ##################################
@@ -27,4 +35,15 @@ fname_Src_Csv_2=44_5.1_10_rawdata.(AUDJPY).(Period-H1).(NumOfUnits-8000).(Bars-A
 #	at : 2019/05/14 13:11:49
 #
 ##################################
-numOf_BDs_For_Correl_Op=50
+#numOf_BDs_For_Correl_Op=50
+numOf_BDs_For_Correl_Op=20
+
+##################################
+#
+#	numOf_Request_BDs
+#	
+#	in : views.py :: def _BUSL3_Tester_No_44_1__Sec_1_A13_Correlation_
+#	at : 2019/05/15 15:33:24
+#
+##################################
+numOf_Request_BDs=500
