--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/conf/busl_3__sec-14.conf
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/conf/busl_3__sec-14.conf
@@ -15,9 +15,21 @@
 ##################################
 #
 #	source csv file name
+#	at : 2019/05/17 12:44:32
 #	used in : 
 #		views :: def _BUSL3_Tester_No_44_1__Sec_1_A14_OCHL_Ratio
 #
 ##################################
 #	csv
 fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.csv
+
+
+##################################
+#
+#	source csv : dir
+#	at : 2019/05/17 12:44:32
+#	used in : 
+#		views :: def _BUSL3_Tester_No_44_1__Sec_1_A14_OCHL_Ratio
+#
+##################################
+dpath_Src_Csv="C:\WORKS_2\WS\WS_Others.prog\prog\D-7\2_2\VIRTUAL\Admin_Projects\curr\data\csv_raw"
