myself] res free# JVEMV6 44#8.2 69 / 44. currency / 8. prog-python / 2. basic stats, cat-2 / 20190519
steps=~
------------
g c -a

# TASK-1 : new op func → def _BUSL3_Tester_No_44_1__Sec_1_A15_

	==> ok

--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/conf/busl_3__sec-15.conf
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/conf/busl_3__sec-15.conf
@@ -1,6 +1,6 @@
 ##################################
-#	file : busl_3__sec-14.conf (C:\WORKS_2\WS\WS_Others.prog\prog\D-7\2_2\VIRTUAL\Admin_Projects\curr\data\conf)
-#	at : 2019/05/17 12:30:06
+#	file : busl_3__sec-15.conf (C:\WORKS_2\WS\WS_Others.prog\prog\D-7\2_2\VIRTUAL\Admin_Projects\curr\data\conf)
+#	at : 2019/05/19 16:16:23
 #
 #	<Usage>
 #		1. use "#" char at the top of the line for comment lines
@@ -10,14 +10,18 @@
 #		1. the key, the equal symbol, and the value ==> no space between them.
 #			==> e.g. 'abc=200'	--> proper
 #					 'abc = 200'	--> NOT proper
+#		2. string var such as file names	---> write without folding the string with quation symbols
+#			==> i.e.
+#					NO : "abc.txt"
+#					YES : abc.txt
 ##################################
 
 ##################################
 #
 #	source csv file name
-#	at : 2019/05/17 12:44:32
+#	at : 2019/05/19 16:18:19
 #	used in : 
-#		views :: def _BUSL3_Tester_No_44_1__Sec_1_A14_OCHL_Ratio
+#		
 #
 ##################################
 #	csv
@@ -27,9 +31,9 @@ fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-A
 ##################################
 #
 #	source csv : dir
-#	at : 2019/05/17 12:44:32
+#	at : 2019/05/19 16:18:19
 #	used in : 
-#		views :: def _BUSL3_Tester_No_44_1__Sec_1_A14_OCHL_Ratio
+#		
 #
 ##################################
 #dpath_Src_Csv="C:\WORKS_2\WS\WS_Others.prog\prog\D-7\2_2\VIRTUAL\Admin_Projects\curr\data\csv_raw"
