--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/conf/busl_3__sec-14_2.conf
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/conf/busl_3__sec-14_2.conf
@@ -21,8 +21,8 @@
 #
 ##################################
 #	csv
-fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.csv
-
+#fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.csv
+fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-H1).(NumOfUnits-8000).(Bars-ALL-20190508_143318).20190311_090020.csv
 
 ##################################
 #
