--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/conf/busl_3__M_1_A1.conf
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/conf/busl_3__M_1_A1.conf
@@ -33,9 +33,9 @@
 #		
 ##################################
 #	csv
-#fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.csv
+fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.csv
 #	dummy
-fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).csv
+#fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).csv
 
 
 ##################################
@@ -61,6 +61,7 @@ dpath_Src_Csv=C:\WORKS_2\WS\WS_Others.prog\prog\D-7\2_2\VIRTUAL\Admin_Projects\c
 locIn_BB=Z5
 volOf_OC=0.3
 VolOf_HL=4.2
-ratioOf_OCHL=10.0
+#ratioOf_OCHL=10.0
+ratioOf_OCHL=0.1
 ratioOf_Shadow_Upper_Lower=1.25
 
