myself] res free# JVEMV6 44#8.3 3 / 44. currency / 8. prog-python / 3. dp-1 / 20190601 no-2
steps=~
------------
g c -a

TASK-1 : "step : A : 2.4            search : all conditions"

        ==> comp.

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,6 @@ prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/log/storage_log
 
 ### 2019/05/01 01:03:40
 prog/D-7/2_2/VIRTUAL/*.dat
+
+### 2019/06/01 18:03:39
+prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/images/44#8.3/*.png
