--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/conf/busl_3__M_1_A1.conf
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/conf/busl_3__M_1_A1.conf
@@ -27,16 +27,20 @@
 
 ##################################
 #
-#	source csv file name
+#	source csv : file name
 #	at : 2019/05/30 11:14:50
 #	used in : 
 #		
 ##################################
-#	csv
+#	A/J, M15
 fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.csv
 #	dummy
 #fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).csv
+#	A/J, H1
+#fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-H1).(NumOfUnits-8000).(Bars-ALL-20190508_143318).20190311_090020.csv
 
+#	U/J, M15
+#fname_Src_Csv=44_5.1_10_rawdata.(USDJPY).(Period-M15).(NumOfUnits-10000).(Bars-ALL-20190427_162903).20190324_112524.csv
 
 ##################################
 #
