myself] res free# JVEMV6 44#8.3_10 / 44. currency / 8. prog-python / 3. dp-1 / 20190616_095223 ::]20190616_111208
----------------
T-1.1 : debug : "step : B1 : j3 : N : 2"

	--> a.o.
	==> comp

--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/conf/busl_3__M_1_A3.conf
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/conf/busl_3__M_1_A3.conf
@@ -33,10 +33,11 @@
 #		
 ##################################
 #	A/J, M15
-fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.csv
+#fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.csv
 
 #	A/J, H1
-fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-H1).(NumOfUnits-8000).(Bars-ALL-20190508_143318).20190311_090020.csv
+#fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-H1).(NumOfUnits-8000).(Bars-ALL-20190508_143318).20190311_090020.csv
+fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-H1).(NumOfUnits-9000).(Bars-ALL-20190616_110109).20190616_105536.csv
 
 #	dummy
 #fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).csv
