--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,7 @@ prog/D-7/2_2/VIRTUAL/*.dat
 
 ### 2019/06/01 18:03:39
 prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/images/44#8.3/*.png
+
+### 2019/07/24 15:50:11
+prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/log/BUSL3_*
+
