myself] res free# JVEMV6 44#8.4.1_10 / 44. currency / 8. prog-python / 4 tester / 1. id-1 / 20190804_180225 ::]20190804_191827
steps=~
------------------------
g c -a

TASK-1 : different thresholds
TASK-2 : different thresholds ==> use csv :

	==> ok

--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/conf/busl_3__tester_T_1__Buy_Up.conf
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/conf/busl_3__tester_T_1__Buy_Up.conf
@@ -33,8 +33,9 @@
 #		
 ##################################
 #	A/J, M15
-fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.[SLICE-50].csv
+#fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.[SLICE-50].csv
 #fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.[SLICE-1000].csv
+fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.[SLICE-500].csv
 
 ##################################
 #
@@ -45,7 +46,7 @@ fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-A
 #
 ##################################
 #dpath_Src_Csv="C:\WORKS_2\WS\WS_Others.prog\prog\D-7\2_2\VIRTUAL\Admin_Projects\curr\data\csv_raw"
-dpath_Src_Csv=C:\WORKS_2\WS\WS_Others.prog\prog\D-7\2_2\VIRTUAL\Admin_Projects\curr\data\csv_raw
+#dpath_Src_Csv=C:\WORKS_2\WS\WS_Others.prog\prog\D-7\2_2\VIRTUAL\Admin_Projects\curr\data\csv_raw
 
 ##################################
 #
@@ -54,11 +55,17 @@ dpath_Src_Csv=C:\WORKS_2\WS\WS_Others.prog\prog\D-7\2_2\VIRTUAL\Admin_Projects\c
 #	used in : #_20190802_160702:marker
 #
 ##################################
-valOf_TP=0.04
-#valOf_TP=0.05
-#valOf_TP=0.06
+#valOf_TP=0.12
+#valOf_TP=0.10
 #valOf_TP=0.08
+#valOf_TP=0.06
+valOf_TP=0.04
+
 valOf_SL=0.02
+#valOf_SL=0.03
+#valOf_SL=0.04
+#valOf_SL=0.05
+#valOf_SL=0.06
 
 valOf_SPREAD=0.01
 #valOf_SPREAD=0.02
