myself] res free# JVEMV6 44#8.4.1_11 / 44. currency / 8. prog-python / 4 tester / 1. id-1 / 20190805_164500
steps=~
------------------------
g c -a

new FUNC : tester_T_1__Buy_Up__Exec_Multi_TP_SL_Sets(listOf_TP_SL_Sets)

lines in “tester_T_1__Buy_Up(request)” ⇒ move to ---> tester_T_1__Buy_Up__Exec_Multi_TP_SL_Sets(listOf_TP_SL_Sets)

	==> started

--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/conf/busl_3__tester_T_1__Buy_Up.conf
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/conf/busl_3__tester_T_1__Buy_Up.conf
@@ -33,9 +33,9 @@
 #		
 ##################################
 #	A/J, M15
-#fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.[SLICE-50].csv
+fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.[SLICE-50].csv
 #fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.[SLICE-1000].csv
-fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.[SLICE-500].csv
+#fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.[SLICE-500].csv
 
 ##################################
 #
@@ -69,3 +69,24 @@ valOf_SL=0.02
 
 valOf_SPREAD=0.01
 #valOf_SPREAD=0.02
+
+##################################
+#
+#	flag : use ==> tester_T_1__Buy_Up__Exec_Multi_TP_SL_Sets
+#	at : 2019/08/05 17:07:13
+#	used in : #_20190805_165909:caller
+#
+##################################
+is_Exec_Exec_Multi_TP_SL_Sets=True
+#is_Exec_Exec_Multi_TP_SL_Sets=False
+
+##################################
+#
+#	list : TPs, SLs
+#	at : 2019/08/05 17:48:17
+#	used in : 
+#
+##################################
+lo_TPs=0.12,0.10,0.08,0.06,0.04
+lo_SLs=0.06,0.05,0.04,0.03,0.02
+
