res free# JVEMV6 44#8.5.1_1 / 44. currency / 8. prog-python / 5. manage-trading-data / 1. build result csv data / 20190901_144558
steps=~
------------------------
g c -a

2. TASK-1 : new file → start coding2.  TASK-1 : new file → start coding
3. TASK-2 1. T-1.1 : get list of trade numbers
4. TASK-3 : report file

		==> going

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/ops/44_8.5/44_8.5_build-result-csv-data.py=utf-8
 encoding//prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/ops/44_9/44_9_renumbering_raw_csv_data.py=utf-8
 encoding//prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/ops/5.1/1_1.py=utf-8
 encoding//prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/ops/5.1/38-/1_1.py=utf-8
