--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/conf/busl_3__tester_T_2.conf
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/data/conf/busl_3__tester_T_2.conf
@@ -33,7 +33,8 @@
 #		
 ##################################
 #	A/J, M15
-fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.[SLICE-50].csv
+#fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.[SLICE-50].csv
+fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.[SLICE-100].csv
 #fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.[SLICE-1000].csv
 #fname_Src_Csv=44_5.1_10_rawdata.(AUDJPY).(Period-M15).(NumOfUnits-18000).(Bars-ALL-20190424_184417).20190311_081029.[SLICE-500].csv
 
